# realglam

./: .env  Dockerfile  README.md  arealglam-gpt-backend.code-workspace  pyproject.toml  requirements.txt  simpleUI.Dockerfile
app/: main.py  test_main_simpleUI.py
app/assistants/: create_assistants.md
app/assistants/function_calls/: wardrobe_functions.py
app/assistants/prompts/: cfo.py  psychologist.py  wardrobe.py
app/services/: assistant_processing.py
app/threads/: async_thread.py
app/utils/: logging_setup.py  oai_clients.py  websockets.py
data/: create_product_kb.py  get_product_data.py  run_kb_pipeline.py
data/output/20231215103429_single_kb/: products.json  products_knowledge-base.txt
data/output/20231216084352_multi_kb/: product_category_id_38.json  product_category_id_39.json  product_category_id_40.json  product_category_id_41.json  product_category_id_42.json  product_category_id_43.json  product_category_id_44.json  product_category_id_45.json  product_category_id_46.json  product_category_id_47.json  product_category_id_48.json  product_category_id_49.json  product_category_id_50.json  product_category_id_51.json  product_category_id_52.json  product_category_id_53.json  product_category_id_54.json  product_category_id_55.json  product_category_id_56.json  product_category_id_57.json  (+1 more)
static/: index.html
tests/integration/: config.yaml  test_assistants_pipeline.py  test_async_logic.py  test_extract_wardrobe_items.py
tests/token_costs/: calculate.py  token_costs_20231224_105555.json
tests/unit/: test_unit_asyncthread.py
(+23 files in other folders)
